feat: Add comprehensive card factory and template system
- Create CardFactory component for dynamic card generation from JSON data
- Add CardFactoryDemo component for testing different card types
- Implement TemplateManager with categorized templates and search
- Add CardTemplates data with marketing, business, process, comparison, and content templates
- Include template utility functions for searching, filtering, and validation
- Register new components in Render.tsx for easy access
- Update package.json with new export scripts

This provides a complete system for creating professional infographic cards
from JSON data with built-in templates and easy customization.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "export:linkedin-unified": "node src/export/export-linkedin-unified.mjs",
     "export:conversation": "node src/export/export-conversation.mjs",
     "export:infographic": "node src/export/export-infographic-test.mjs",
+    "export:card": "node src/export/export-single-card.mjs",
     "test": "node tests/asset-validation.mjs",
     "test:url": "node tests/url-test.mjs",
     "test:exports": "node tests/export-tests.mjs",
